Fix app body overflow

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -11,6 +11,7 @@ body {
     margin: 0;
     width: 100%;
     height: 100%;
+    overflow: hidden;
     color: white;
     font-family: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
     "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
